--- a/.env.template
+++ b/.env.template
@@ -18,3 +18,8 @@ TRADING_MODE=paper
 
 # --- Logging ---
 LOG_LEVEL=INFO
+
+# --- SSL Verification (for development only) ---
+# Set to true ONLY if you have SSL inspection/proxy blocking the API
+# WARNING: Never use this with real funds - development/testing only
+# DISABLE_SSL_VERIFICATION=false
