Improve regime analysis, update readme, propagate strategy metadata, and harden execution with trade-frequency throttling

--- a/.env.template
+++ b/.env.template
@@ -19,6 +19,9 @@ TRADING_MODE=paper
 # --- Logging ---
 LOG_LEVEL=INFO
 
+# Set to true to log every scan decision (verbose)
+# LOG_DECISION_TRACE=false
+
 # --- SSL Verification (for development only) ---
 # Set to true ONLY if you have SSL inspection/proxy blocking the API
 # WARNING: Never use this with real funds - development/testing only
